# TriathlonAPI

./: Cargo.toml
backend/: .env  Cargo.toml  docker-compose.yml
backend/src/: main.rs
backend/src/services/: mod.rs  triathlons.rs
src/: main.rs
src/services/: challenge.rs  ironman.rs  mod.rs
